Bug#19660 mysqldump --single-transaction should be with CONSISTENT SNAPSHOT